Parse file xml instead, and add inner classes to the files

--- a/template.html
+++ b/template.html
@@ -37,11 +37,7 @@
     </nav>
     <div class="main">
       <div class="content">
-        <div class="classHeader">
-          <h1 id="title">Hello, world!</h1>
-        </div>
-        <div class="classDescription"></div>
-        <div class="classMethods"></div>
+
       </div>
     </div>
 
@@ -59,6 +55,13 @@
 </body>
 
 <div id="templates">
+  <div id="classTemplate" class="classBlock">
+    <div class="classHeader">
+      <h1 class="classTitle"></h1>
+    </div>
+    <div class="classDescription"></div>
+    <div class="classMethods"></div>
+  </div>
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
