Get section descriptions and other fixes

--- a/template.html
+++ b/template.html
@@ -65,6 +65,7 @@
 
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
+    <div class="sectionDescription"></div>
     <div class="sectionContent"></div>
   </div>
 
