--- a/template.html
+++ b/template.html
@@ -79,7 +79,9 @@
       <span class="note"></span>
     </div>
 
-    <div class="methodDescription "  style="display:none"></div>
+    <div class="methodDescription"  style="display:none">
+
+    </div>
 
   </div>
 
