--- a/templateToc.html
+++ b/templateToc.html
@@ -44,9 +44,7 @@
       <div class="form-group">
         <input type="text"  id="search" class="form-control" placeholder="What are you looking for?" autocomplete="off">
       </div>
-      <ul class="searchResult hidden">
-
-      </ul>
+      <ul class="searchResult hidden searchResultNavbar"></ul>
     </div>
 
 </div>
