--- a/template.html
+++ b/template.html
@@ -30,7 +30,7 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">ofDoc</a>
+      <a class="navbar-brand" href="index.html">ofDoc</a>
     </div>
 
 
