--- a/template.html
+++ b/template.html
@@ -82,7 +82,10 @@
 
 </body>
 
+<!-- Templates - These are being used by the generator script -->
 <div id="templates">
+
+  <!-- Class template -->
   <div id="classTemplate" class="classBlock">
     <div class="classHeader">
       <h1 class="classTitle"></h1>
@@ -91,26 +94,26 @@
     <div class="classMethods"></div>
   </div>
 
+  <!-- Section template -->
   <div id="sectionTemplate">
     <h3 class="sectionHeader"></h3>
     <div class="sectionDescription"></div>
     <div class="sectionContent"></div>
   </div>
 
+  <!-- Class method template -->
   <div id="classMethodTemplate" class="method">
     <div class="methodHeader">
       <div class="methodHeaderBox">
         <span class="type"></span>
         <a class="name"></a>
         <span class="args"></span>
+        <span class="kind"></span>
         <span class="note"></span>
       </div>
     </div>
 
-    <div class="methodDescription"  style="display:none">
-
-    </div>
-
+    <div class="methodDescription"  style="display:none"> <!-- Description goes here --> </div>
   </div>
 
 </div>
