--- a/templateToc.html
+++ b/templateToc.html
@@ -40,7 +40,8 @@
 <div class="container">
 
     <div class="content toc">
-      <h1 id="title">openFrameworks documentation</h1>
+      <h1 id="title" class="pull-left">openFrameworks documentation</h1>
+      <div class="pull-right labelToggle"><a onclick="$('.label').toggle()" href="#">Toggle completion</a></div>
       <div class="form-group">
         <input type="text"  id="search" class="form-control" placeholder="What are you looking for?" autocomplete="off">
       </div>
