--- a/template.html
+++ b/template.html
@@ -74,11 +74,13 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
 
 <script src="script.js"></script>
 <script src="fuse.min.js"></script>
 <script src="toc.js"></script>
 <script src="search.js"></script>
+<script src="info.js"></script>
 
 </body>
 
