--- a/templateToc.html
+++ b/templateToc.html
@@ -40,6 +40,7 @@
 <div class="container">
 
     <div class="content toc">
+      <div class="lastModified"></div>
       <h1 id="title" class="pull-left">openFrameworks documentation</h1>
       <div class="pull-right labelToggle"><a onclick="$('.label').toggle()" href="#">Toggle completion</a></div>
       <div class="form-group">
@@ -56,12 +57,13 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
 
 <script src="script.js"></script>
 <script src="fuse.min.js"></script>
 <script src="toc.js"></script>
 <script src="search.js"></script>
+<script src="info.js"></script>
 
 </body>
 
