fix rendering of search box for firefox

--- a/templateToc.html
+++ b/templateToc.html
@@ -44,7 +44,7 @@
       <h1 id="title" class="pull-left">openFrameworks documentation</h1>
       <div class="pull-right labelToggle"><a onclick="$('.label').toggle()" href="#">Toggle completion</a></div>
       <div class="form-group">
-        <input type="text"  id="search" class="form-control" placeholder="What are you looking for?" autocomplete="off">
+        <input type="text"  id="search pull-left" class="form-control" placeholder="What are you looking for?" autocomplete="off">
       </div>
       <ul class="searchResult hidden searchResultNavbar"></ul>
     </div>
